--- a/bbpm/trunk/translations/bbpm.pot
+++ b/bbpm/trunk/translations/bbpm.pot
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.1-alpha7\n"
+"Project-Id-Version: 0.1-beta1\n"
 "Report-Msgid-Bugs-To: http://bbpress.org/plugins/topic/bbpm/\n"
 "POT-Creation-Date: 2009-09-28 13:15+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
